refactor: replace virtual thread executor with cached thread pool for Java 17
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>